// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generators/MinimalHTML algorithm escapes HTML syntax 1`] = `
"<!DOCTYPE html><html><body style=\\"color:#303030;font-weight:400;white-space:pre-wrap;font-family:sans-serif\\"><div>&lt;script&gt;alert(&quot;xss&quot;);&lt;/script&gt;
</div><ul style=\\"margin:0px;list-style-position:inside;padding-left:1.5rem\\"><li>&lt;script&gt;alert(&quot;xss&quot;);&lt;/script&gt;
</li><li style=\\"text-align: right\\">&lt;script&gt;alert(&quot;xss&quot;);&lt;/script&gt;
</li><li>not xss &amp; okay
</li><li style=\\"text-align: center\\">not xss &amp; okay
</li></ul><div>
</div></body></html>"
`;

exports[`generators/MinimalHTML algorithm handles fonts 1`] = `
"<!DOCTYPE html><html><body style=\\"color:#303030;font-weight:400;white-space:pre-wrap;font-family:sans-serif\\"><div><span style=\\"font-family:'courier'\\">Hello</span>, <span style=\\"font-family:'serif'\\">world</span>; do <span style=\\"font-weight:bold;font-family:'monospace'\\">you</span> like my fonts?
</div></body></html>"
`;

exports[`generators/MinimalHTML algorithm handles images 1`] = `
"<!DOCTYPE html><html><body style=\\"color:#303030;font-weight:400;white-space:pre-wrap;font-family:sans-serif\\"><div><img src=\\"https://quilljs.com/assets/images/logo.svg\\" width=\\"140\\" height=\\"38\\"/>
</div><div>Sized image.
</div><div>
</div><div><img src=\\"https://raw.githubusercontent.com/quilljs/quill/master/assets/favicon.png\\"/>
</div><div>Left-aligned image.
</div><div>
</div><div style=\\"text-align: center\\"><img src=\\"https://raw.githubusercontent.com/quilljs/quill/master/assets/favicon.png\\"/>
</div><div style=\\"text-align: center\\">Center-aligned image.
</div><div style=\\"text-align: center\\">
</div><div style=\\"text-align: right\\"><img src=\\"https://raw.githubusercontent.com/quilljs/quill/master/assets/favicon.png\\"/>
</div><div style=\\"text-align: right\\">Right-aligned image.
</div><div>
</div><div style=\\"text-align: center\\"><img src=\\"https://quilljs.com/assets/images/logo.svg\\" width=\\"140\\" height=\\"38\\"/>
</div><div style=\\"text-align: center\\">Sized and centered image.
</div></body></html>"
`;

exports[`generators/MinimalHTML algorithm handles line formats within the same DeltaOperation 1`] = `
"<!DOCTYPE html><html><body style=\\"color:#303030;font-weight:400;white-space:pre-wrap;font-family:sans-serif\\"><div style=\\"text-align: center\\">Centered.
</div><div style=\\"text-align: center\\">Centered <span style=\\"font-weight:bold;color:#b2b200\\">with</span> <span style=\\"text-decoration:underline\\"><a href=\\"http://quilljs.com\\">some</a></span> formatting.
</div><div style=\\"text-align: right\\">Right aligned.
</div><div style=\\"text-align: right\\"><span style=\\"color:#66b966\\">Right</span> <span style=\\"font-style:italic;text-decoration:underline\\">aligned</span> with <span style=\\"font-weight:bold\\">some</span> formatting.
</div><div style=\\"text-align: justify\\">
</div><div style=\\"text-align: justify\\"><span style=\\"font-weight:bold\\">Justified</span> so the text nicely fills the line. <span style=\\"color:#f06666\\">Justified</span> <span style=\\"color:#66a3e0\\">so</span> <span style=\\"color:#c285ff\\">the</span> text nicely fills the line. Justified so the text nicely fills the line.
</div><div style=\\"text-align: justify\\">Also justified.
</div><div>
</div><ul style=\\"margin:0px;list-style-position:inside;padding-left:1.5rem\\"><li>Unordered
</li><li>List
</li></ul><div>
</div><ol style=\\"margin:0px;list-style-position:inside;padding-left:1.5rem\\"><li>Ordered
</li><li>List
</li></ol><div>
</div><ul style=\\"margin:0px;list-style-position:inside;padding-left:1.5rem\\"><li>Mixed
</li></ul><ol style=\\"margin:0px;list-style-position:inside;padding-left:1.5rem\\"><li>List
</li></ol><ul style=\\"margin:0px;list-style-position:inside;padding-left:1.5rem\\"><li>Weirdly
</li></ul><ol style=\\"margin:0px;list-style-position:inside;padding-left:1.5rem\\"><li>Laid Out
</li><li>With Numbers
</li></ol><ul style=\\"margin:0px;list-style-position:inside;padding-left:1.5rem\\"><li>Interspersed
</li></ul><div>
</div><ul style=\\"margin:0px;list-style-position:inside;padding-left:1.5rem\\"><li>list
</li><li style=\\"text-align: center\\">with
</li><li style=\\"text-align: right\\">alignment
</li><li style=\\"text-align: justify\\">and justification in case the list items get stupendously enormously long
</li></ul></body></html>"
`;

exports[`generators/MinimalHTML algorithm handles lists 1`] = `
"<!DOCTYPE html><html><body style=\\"color:#303030;font-weight:400;white-space:pre-wrap;font-family:sans-serif\\"><div>Normal text to start.
</div><ul style=\\"margin:0px;list-style-position:inside;padding-left:1.5rem\\"><li>chalk
</li><li>
</li><li>cheese
</li></ul><div>Now an ordered list:
</div><ol style=\\"margin:0px;list-style-position:inside;padding-left:1.5rem\\"><li>apples
</li><li style=\\"text-align: right\\">oranges
</li><li>pears
</li><li>
</li></ol><div>And finally, adjacent lists:
</div><ul style=\\"margin:0px;list-style-position:inside;padding-left:1.5rem\\"><li>please
</li><li>excuse
</li><li>my
</li></ul><ol style=\\"margin:0px;list-style-position:inside;padding-left:1.5rem\\"><li>dear
</li><li>aunt
</li><li>sally
</li></ol></body></html>"
`;

exports[`generators/MinimalHTML algorithm handles standard Quill formats 1`] = `
"<!DOCTYPE html><html><body style=\\"color:#303030;font-weight:400;white-space:pre-wrap;font-family:sans-serif\\"><div>Plain.  <span style=\\"font-weight:bold\\">Bold. </span><span style=\\"font-style:italic\\">Italic. </span><span style=\\"text-decoration:underline\\">Underline.</span> <span style=\\"color:#9933ff\\">Colored.</span> <a href=\\"https://quilljs.com\\">Link.</a>
</div><div><span style=\\"font-size:x-small\\">Small, </span>normal, <span style=\\"font-size:x-large\\">large, </span><span style=\\"font-size:xx-large\\">huge!</span>
</div><div>Normal family. <span style=\\"font-family:'monospace'\\">Monospace family.</span> <span style=\\"font-family:'serif'\\">Serif family.</span>
</div><div>Left aligned.
</div><div>Left <span style=\\"font-weight:bold\\">aligned</span> with <span style=\\"font-style:italic;text-decoration:underline\\">some</span> <span style=\\"color:#e60000\\">formatting</span>.
</div><div style=\\"text-align: center\\">Centered.
</div><div style=\\"text-align: center\\">Centered <span style=\\"font-weight:bold;color:#b2b200\\">with</span> <span style=\\"text-decoration:underline\\"><a href=\\"http://quilljs.com\\">some</a></span> formatting.
</div><div style=\\"text-align: right\\">Right aligned.
</div><div style=\\"text-align: right\\"><span style=\\"color:#66b966\\">Right</span> <span style=\\"font-style:italic;text-decoration:underline\\">aligned</span> with <span style=\\"font-weight:bold\\">some</span> formatting.
</div><div style=\\"text-align: justify\\">
</div><div style=\\"text-align: justify\\"><span style=\\"font-weight:bold\\">Justified</span> so the text nicely fills the line. <span style=\\"color:#f06666\\">Justified</span> <span style=\\"color:#66a3e0\\">so</span> <span style=\\"color:#c285ff\\">the</span> text nicely fills the line. Justified so the text nicely fills the line.
</div><div style=\\"text-align: justify\\">Also justified.
</div><div>
</div><ul style=\\"margin:0px;list-style-position:inside;padding-left:1.5rem\\"><li>Unordered
</li><li>List
</li></ul><div>
</div><ol style=\\"margin:0px;list-style-position:inside;padding-left:1.5rem\\"><li>Ordered
</li><li>List
</li></ol><div>
</div><ul style=\\"margin:0px;list-style-position:inside;padding-left:1.5rem\\"><li>Mixed
</li></ul><ol style=\\"margin:0px;list-style-position:inside;padding-left:1.5rem\\"><li>List
</li></ol><ul style=\\"margin:0px;list-style-position:inside;padding-left:1.5rem\\"><li>Weirdly
</li></ul><ol style=\\"margin:0px;list-style-position:inside;padding-left:1.5rem\\"><li>Laid Out
</li><li>With Numbers
</li></ol><ul style=\\"margin:0px;list-style-position:inside;padding-left:1.5rem\\"><li>Interspersed
</li></ul><div>
</div><ul style=\\"margin:0px;list-style-position:inside;padding-left:1.5rem\\"><li>list
</li><li style=\\"text-align: center\\">with
</li><li style=\\"text-align: right\\">alignment
</li><li style=\\"text-align: justify\\">and justification in case the list items get stupendously enormously long
</li></ul><div>
</div></body></html>"
`;

exports[`generators/MinimalHTML algorithm handles styled lists 1`] = `
"<!DOCTYPE html><html><body style=\\"color:#303030;font-weight:400;white-space:pre-wrap;font-family:sans-serif\\"><ul style=\\"margin:0px;list-style-position:inside;padding-left:1.5rem\\"><li><span style=\\"font-weight:bold;text-decoration:underline\\">lots</span> <span style=\\"color:#9933ff\\">of</span> <span style=\\"font-weight:bold;font-style:italic;text-decoration:underline\\"><a href=\\"http://google.com\\">style</a></span> <span style=\\"font-style:italic\\">happening</span>
</li><li>lots <span style=\\"font-weight:bold\\">of</span> <span style=\\"color:#e60000\\">function</span> too
</li><li>gotta love it all 
</li></ul></body></html>"
`;

exports[`generators/MinimalHTML algorithm handles trivial aligned text 1`] = `
"<!DOCTYPE html><html><body style=\\"color:#303030;font-weight:400;white-space:pre-wrap;font-family:sans-serif\\"><div style=\\"text-align: center\\">hi
</div></body></html>"
`;

exports[`generators/MinimalHTML algorithm handles trivial inputs 1`] = `
"<!DOCTYPE html><html><body style=\\"color:#303030;font-weight:400;white-space:pre-wrap;font-family:sans-serif\\"><ul style=\\"margin:0px;list-style-position:inside;padding-left:1.5rem\\"><li>hi
</li></ul></body></html>"
`;
